--- a/add-trip.html
+++ b/add-trip.html
@@ -77,7 +77,8 @@
                                                     <label class="tx-semibold">Start Location*</label>
                                                 </div>
                                                 <div class="col-md-3">
-                                                    <input type="text" class="form-control" id="start_location_name">
+                                                    <input type="text" class="form-control" id="start_location_name"
+                                                        hidden>
                                                     <input type="text" class="form-control" id="start_location_lat"
                                                         hidden>
                                                     <input type="text" class="form-control" id="start_location_long"
@@ -141,6 +142,30 @@
 
     <script>
         hide_loader()
+
+        $("#driver_name").select2({
+            theme: "bootstrap",
+            width: "100%",
+            minimumInputLength: 3,
+            placeholder: "Enter a driver",
+            allowClear: true,
+            ajax: {
+                url: BASE_URL + GET_DRIVERS_SELECT,
+                type: "POST",
+                dataType: 'json',
+                data: JSON.stringify({
+                    "franchise_id": "FOY0320"
+                }),
+                processResults: function (response, params) {
+                    return {
+                        results: response.data,
+                        pagination: {
+                            more: (params.page * 20) < response.total
+                        }
+                    };
+                },
+            }
+        });
 
         function isNumber(event) {
             event = (event) ? event : window.event;
